[workspace]
members = ["common/*", "contracts/*"]

[profile.release.package.cw-carbonable-lib]
codegen-units = 1
incremental = false

[profile.release.package.cw-carbonable-nft]
codegen-units = 1
incremental = false

[profile.release.package.cw-carbonable-sell]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
